# Auto-Scrcpy

./: .gitignore  AGENTS.md  Cargo.toml  README.md  latest_version
.github/workflows/: auto-get-latest-version.yml  build.yml
src/: device_monitor.rs  downloader.rs  github_api.rs  launcher.rs  main.rs  single_instance.rs  tui.rs  ui.rs  updater.rs
