[package]
name = "scrcpy-launcher"
version = "0.1.4"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
dirs = "6.0"
ratatui = "0.29.0"
crossterm = "0.29.0"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winuser", "wincon", "processthreadsapi", "tlhelp32", "handleapi", "synchapi", "winbase", "winnt", "winerror", "errhandlingapi", "minwindef"] }

